# terrario-serra-app

./: .gitignore  README.md  render.yaml
.github/workflows/: ci.yml
terrario-serra-backend/: .env.example  create_outlets.py  debug_scene.py  migrate_manual_override.py  pyproject.toml  terrario_serra.db  test_scene_automation.py  test_scene_evaluation.py
terrario-serra-backend/app/: database.py  init_db.py  main.py
terrario-serra-backend/app/models/: __init__.py  audit.py  automation_session.py  device.py  kill_switch.py  override.py  scene.py  sensor.py  settings.py  zone.py
terrario-serra-backend/app/providers/: __init__.py  nous_provider.py  tuya_provider.py
terrario-serra-backend/app/routers/: __init__.py  automation.py  devices.py  events.py  health.py  kill_switch.py  scenes.py  sensors.py  zones.py
terrario-serra-backend/app/schemas/: __init__.py  automation.py  device.py  kill_switch.py  scene.py  sensor.py  zone.py
terrario-serra-backend/app/services/: scene_automation.py  scheduler.py
terrario-serra-frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
terrario-serra-frontend/src/: App.tsx  vite-env.d.ts
terrario-serra-frontend/src/api/: index.ts
terrario-serra-frontend/src/components/: KillSwitch.tsx  MappingInterface.tsx  SceneEditor.tsx  ZoneTabs.backup.tsx  ZoneTabs.tsx
terrario-serra-frontend/src/hooks/: useDeviceEvents.ts  useDevices.ts
terrario-serra-frontend/src/lib/: queryClient.ts
